tests/negative/neg_pr1113a_zero_payload_call.safe
package neg_pr1113a_zero_payload_call

   type state is idle or reading (count : integer);

   current : state = idle ();
